[tool.poetry]
name = "faddr"
version = "0.0.2"
description = "Tool to parse configuration of network devices such as Juniper routers and store gathered data in database"
license = "MIT"
authors = ["Fedor Suchkov <f.suchkov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kido5217/faddr"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Telecommunications Industry"
]

[tool.poetry.dependencies]
python = "^3.6"

dataclasses = {version = "^0.8", python = "~3.6"}
ciscoconfparse = "^1.5.30"
tinydb = "^4.4.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.5b2", python = "^3.6.2"}
mypy = "^0.812"
pylint = "^2.8.3"
pytest-cov = "^2.12.1"
pre-commit = {version = "^2.15", python = "^3.6.1"}
tox = "^3.24.4"

[tool.poetry.scripts]
faddr-db = 'faddr.cli:faddr_db'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=faddr"
testpaths = [
    "tests",
]
